@@ -20,6 +20,10 @@
 * <http://www.gnu.org/licenses/>.                                      *
 ***********************************************************************/
 
+#if defined(__CYGWIN__)
+  #include "final/fconfig.h"  // includes _GNU_SOURCE for fd_set
+#endif
+
 #include "final/fc.h"
 #include "final/fstring.h"
 #include "final/fterm.h"
